attached_assets/Pasted-Microsoft-Windows-Version-10-0-14393-c-2016-Microsoft-Corporation-All-rights-reserved-C-User-1758119359769_1758119359770.txt
Microsoft Windows [Version 10.0.14393]
(c) 2016 Microsoft Corporation. All rights reserved.

C:\Users\Administrator\Desktop\user-package>npm run build

> email-sender-desktop@1.0.0 build
> vite build

The CJS build of Vite's Node API is deprecated. See https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.
vite v5.4.20 building for production...
transforming (1) index.html(node:4132) Warning: Failed to load the ES module: C:\Users\Administrator\Desktop\user-package\postcss.config.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
(Use `node --trace-warnings ...` to show where the warning was created)
[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/Administrator/Desktop/user-package/client): [SyntaxError] Unexpected token 'export'
C:\Users\Administrator\Desktop\user-package\postcss.config.js:1
export default {
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1893:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
    at cjsLoader (node:internal/modules/esm/translators:329:5)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:221:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:371:25)]

Node.js v24.8.0

C:\Users\Administrator\Desktop\user-package>npm install

changed 1 package, and audited 839 packages in 3s

111 packages are looking for funding
  run `npm fund` for details

3 moderate severity vulnerabilities

To address all issues (including breaking changes), run:
  npm audit fix --force

Run `npm audit` for details.

C:\Users\Administrator\Desktop\user-package>npm run electron-dev

> email-sender-desktop@1.0.0 electron-dev
> concurrently "npm run dev" "wait-on http://localhost:5173 && electron ."

[0]
[0] > email-sender-desktop@1.0.0 dev
[0] > vite dev --host localhost --port 5173
[0]
[0] The CJS build of Vite's Node API is deprecated. See https://vite.dev/guide/troubleshooting.html#vite-cjs-node-api-deprecated for more details.
[0] Re-optimizing dependencies because lockfile has changed
[0]
[0]   VITE v5.4.20  ready in 525 ms
[0]
[0]   ➜  Local:   http://localhost:5173/
[0] (node:2840) Warning: Failed to load the ES module: C:\Users\Administrator\Desktop\user-package\postcss.config.js. Make sure to set "type": "module" in the nearest package.json file or use the .mjs extension.
[0] (Use `node --trace-warnings ...` to show where the warning was created)
[0] [Failed to load PostCSS config: Failed to load PostCSS config (searchPath: C:/Users/Administrator/Desktop/user-package/client): [SyntaxError] Unexpected token 'export'
[0] C:\Users\Administrator\Desktop\user-package\postcss.config.js:1
[0] export default {
[0] ^^^^^^
[0]
[0] SyntaxError: Unexpected token 'export'
[0]     at wrapSafe (node:internal/modules/cjs/loader:1691:18)
[0]     at Module._compile (node:internal/modules/cjs/loader:1734:20)
[0]     at Object..js (node:internal/modules/cjs/loader:1893:10)
[0]     at Module.load (node:internal/modules/cjs/loader:1480:32)
[0]     at Module._load (node:internal/modules/cjs/loader:1299:12)
[0]     at TracingChannel.traceSync (node:diagnostics_channel:322:14)
[0]     at wrapModuleLoad (node:internal/modules/cjs/loader:244:24)
[0]     at cjsLoader (node:internal/modules/esm/translators:329:5)
[0]     at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:221:7)
[0]     at ModuleJob.run (node:internal/modules/esm/module_job:371:25)]
[0]
[0] Node.js v24.8.0
[0] npm run dev exited with code 1
